l25.output
Grammar

    0 $accept: program $end

    1 program: PROGRAM IDENT LBRACE struct_def_list func_def main_block RBRACE

    2 struct_def_list: /* empty */
    3                | struct_def_list struct_def_stmt

    4 struct_def_stmt: STRUCT_DEF IDENT LBRACE struct_member_list RBRACE SEMICOLON

    5 struct_member_list: /* empty */
    6                   | struct_member_list declare_stmt SEMICOLON

    7 func_def: /* empty */
    8         | func_def func

    9 func: FUNC IDENT LPAREN param_list RPAREN LBRACE stmt_list RETURN expr SEMICOLON RBRACE
   10     | FUNC IDENT LPAREN RPAREN LBRACE stmt_list RETURN expr SEMICOLON RBRACE

   11 $@1: /* empty */

   12 main_block: MAIN $@1 block

   13 param_list: IDENT
   14           | param_list COMMA IDENT

   15 stmt_list: stmt SEMICOLON
   16          | stmt_list stmt SEMICOLON

   17 stmt: declare_stmt
   18     | array_declare_stmt
   19     | struct_declare_stmt
   20     | assign_stmt
   21     | if_stmt
   22     | while_stmt
   23     | input_stmt
   24     | output_stmt
   25     | func_call

   26 struct_declare_stmt: STRUCT IDENT IDENT ASSIGN LBRACE struct_init_list RBRACE
   27                    | STRUCT IDENT IDENT

   28 struct_init_list: expr
   29                 | struct_init_list COMMA expr

   30 array_declare_stmt: LBRACKET NUMBER RBRACKET IDENT ASSIGN LBRACE number_list RBRACE

   31 number_list: NUMBER
   32            | number_list COMMA NUMBER

   33 declare_stmt: LET IDENT
   34             | LET IDENT ASSIGN expr

   35 assign_stmt: IDENT ASSIGN expr
   36            | IDENT DOT IDENT ASSIGN expr
   37            | IDENT LBRACKET expr RBRACKET ASSIGN expr

   38 if_stmt: IF LPAREN bool_expr RPAREN block
   39        | IF LPAREN bool_expr RPAREN block ELSE block

   40 while_stmt: WHILE LPAREN bool_expr RPAREN block

   41 input_stmt: INPUT LPAREN ident_list RPAREN

   42 output_stmt: OUTPUT LPAREN expr_list RPAREN

   43 func_call: IDENT LPAREN arg_list RPAREN
   44          | IDENT LPAREN RPAREN

   45 arg_list: expr
   46         | arg_list COMMA expr

   47 expr_list: expr
   48          | expr_list COMMA expr

   49 ident_list: IDENT
   50           | ident_list COMMA IDENT

   51 bool_expr: expr EQ expr
   52          | expr NEQ expr
   53          | expr LT expr
   54          | expr GEQ expr
   55          | expr GT expr
   56          | expr LEQ expr

   57 expr: PLUS term
   58     | MINUS term
   59     | term
   60     | expr PLUS term
   61     | expr MINUS term

   62 term: term MUL factor
   63     | term DIV factor
   64     | factor

   65 factor: IDENT
   66       | IDENT DOT IDENT
   67       | IDENT LBRACKET expr RBRACKET
   68       | NUMBER
   69       | LPAREN expr RPAREN
   70       | func_call

   71 $@2: /* empty */

   72 block: LBRACE $@2 stmt_list RBRACE


Terminals, with rules where they appear

$end (0) 0
error (256)
NUMBER (258) 30 31 32 68
IDENT (259) 1 4 9 10 13 14 26 27 30 33 34 35 36 37 43 44 49 50 65 66
    67
PROGRAM (260) 1
FUNC (261) 9 10
MAIN (262) 12
RETURN (263) 9 10
LET (264) 33 34
IF (265) 38 39
ELSE (266) 39
WHILE (267) 40
INPUT (268) 41
OUTPUT (269) 42
STRUCT_DEF (270) 4
STRUCT (271) 26 27
EQ (272) 51
NEQ (273) 52
LEQ (274) 56
GEQ (275) 54
LT (276) 53
GT (277) 55
ASSIGN (278) 26 30 34 35 36 37
PLUS (279) 57 60
MINUS (280) 58 61
MUL (281) 62
DIV (282) 63
LPAREN (283) 9 10 38 39 40 41 42 43 44 69
RPAREN (284) 9 10 38 39 40 41 42 43 44 69
LBRACKET (285) 30 37 67
RBRACKET (286) 30 37 67
LBRACE (287) 1 4 9 10 26 30 72
RBRACE (288) 1 4 9 10 26 30 72
COMMA (289) 14 29 32 46 48 50
SEMICOLON (290) 4 6 9 10 15 16
DOT (291) 36 66


Nonterminals, with rules where they appear

$accept (37)
    on left: 0
program (38)
    on left: 1, on right: 0
struct_def_list (39)
    on left: 2 3, on right: 1 3
struct_def_stmt (40)
    on left: 4, on right: 3
struct_member_list (41)
    on left: 5 6, on right: 4 6
func_def (42)
    on left: 7 8, on right: 1 8
func (43)
    on left: 9 10, on right: 8
main_block (44)
    on left: 12, on right: 1
$@1 (45)
    on left: 11, on right: 12
param_list (46)
    on left: 13 14, on right: 9 14
stmt_list (47)
    on left: 15 16, on right: 9 10 16 72
stmt (48)
    on left: 17 18 19 20 21 22 23 24 25, on right: 15 16
struct_declare_stmt (49)
    on left: 26 27, on right: 19
struct_init_list (50)
    on left: 28 29, on right: 26 29
array_declare_stmt (51)
    on left: 30, on right: 18
number_list (52)
    on left: 31 32, on right: 30 32
declare_stmt (53)
    on left: 33 34, on right: 6 17
assign_stmt (54)
    on left: 35 36 37, on right: 20
if_stmt (55)
    on left: 38 39, on right: 21
while_stmt (56)
    on left: 40, on right: 22
input_stmt (57)
    on left: 41, on right: 23
output_stmt (58)
    on left: 42, on right: 24
func_call (59)
    on left: 43 44, on right: 25 70
arg_list (60)
    on left: 45 46, on right: 43 46
expr_list (61)
    on left: 47 48, on right: 42 48
ident_list (62)
    on left: 49 50, on right: 41 50
bool_expr (63)
    on left: 51 52 53 54 55 56, on right: 38 39 40
expr (64)
    on left: 57 58 59 60 61, on right: 9 10 28 29 34 35 36 37 45 46
    47 48 51 52 53 54 55 56 60 61 67 69
term (65)
    on left: 62 63 64, on right: 57 58 59 60 61 62 63
factor (66)
    on left: 65 66 67 68 69 70, on right: 62 63 64
block (67)
    on left: 72, on right: 12 38 39 40
$@2 (68)
    on left: 71, on right: 72


State 0

    0 $accept: . program $end

    PROGRAM  shift, and go to state 1

    program  go to state 2


State 1

    1 program: PROGRAM . IDENT LBRACE struct_def_list func_def main_block RBRACE

    IDENT  shift, and go to state 3


State 2

    0 $accept: program . $end

    $end  shift, and go to state 4


State 3

    1 program: PROGRAM IDENT . LBRACE struct_def_list func_def main_block RBRACE

    LBRACE  shift, and go to state 5


State 4

    0 $accept: program $end .

    $default  accept


State 5

    1 program: PROGRAM IDENT LBRACE . struct_def_list func_def main_block RBRACE

    $default  reduce using rule 2 (struct_def_list)

    struct_def_list  go to state 6


State 6

    1 program: PROGRAM IDENT LBRACE struct_def_list . func_def main_block RBRACE
    3 struct_def_list: struct_def_list . struct_def_stmt

    STRUCT_DEF  shift, and go to state 7

    $default  reduce using rule 7 (func_def)

    struct_def_stmt  go to state 8
    func_def         go to state 9


State 7

    4 struct_def_stmt: STRUCT_DEF . IDENT LBRACE struct_member_list RBRACE SEMICOLON

    IDENT  shift, and go to state 10


State 8

    3 struct_def_list: struct_def_list struct_def_stmt .

    $default  reduce using rule 3 (struct_def_list)


State 9

    1 program: PROGRAM IDENT LBRACE struct_def_list func_def . main_block RBRACE
    8 func_def: func_def . func

    FUNC  shift, and go to state 11
    MAIN  shift, and go to state 12

    func        go to state 13
    main_block  go to state 14


State 10

    4 struct_def_stmt: STRUCT_DEF IDENT . LBRACE struct_member_list RBRACE SEMICOLON

    LBRACE  shift, and go to state 15


State 11

    9 func: FUNC . IDENT LPAREN param_list RPAREN LBRACE stmt_list RETURN expr SEMICOLON RBRACE
   10     | FUNC . IDENT LPAREN RPAREN LBRACE stmt_list RETURN expr SEMICOLON RBRACE

    IDENT  shift, and go to state 16


State 12

   12 main_block: MAIN . $@1 block

    $default  reduce using rule 11 ($@1)

    $@1  go to state 17


State 13

    8 func_def: func_def func .

    $default  reduce using rule 8 (func_def)


State 14

    1 program: PROGRAM IDENT LBRACE struct_def_list func_def main_block . RBRACE

    RBRACE  shift, and go to state 18


State 15

    4 struct_def_stmt: STRUCT_DEF IDENT LBRACE . struct_member_list RBRACE SEMICOLON

    $default  reduce using rule 5 (struct_member_list)

    struct_member_list  go to state 19


State 16

    9 func: FUNC IDENT . LPAREN param_list RPAREN LBRACE stmt_list RETURN expr SEMICOLON RBRACE
   10     | FUNC IDENT . LPAREN RPAREN LBRACE stmt_list RETURN expr SEMICOLON RBRACE

    LPAREN  shift, and go to state 20


State 17

   12 main_block: MAIN $@1 . block

    LBRACE  shift, and go to state 21

    block  go to state 22


State 18

    1 program: PROGRAM IDENT LBRACE struct_def_list func_def main_block RBRACE .

    $default  reduce using rule 1 (program)


State 19

    4 struct_def_stmt: STRUCT_DEF IDENT LBRACE struct_member_list . RBRACE SEMICOLON
    6 struct_member_list: struct_member_list . declare_stmt SEMICOLON

    LET     shift, and go to state 23
    RBRACE  shift, and go to state 24

    declare_stmt  go to state 25


State 20

    9 func: FUNC IDENT LPAREN . param_list RPAREN LBRACE stmt_list RETURN expr SEMICOLON RBRACE
   10     | FUNC IDENT LPAREN . RPAREN LBRACE stmt_list RETURN expr SEMICOLON RBRACE

    IDENT   shift, and go to state 26
    RPAREN  shift, and go to state 27

    param_list  go to state 28


State 21

   72 block: LBRACE . $@2 stmt_list RBRACE

    $default  reduce using rule 71 ($@2)

    $@2  go to state 29


State 22

   12 main_block: MAIN $@1 block .

    $default  reduce using rule 12 (main_block)


State 23

   33 declare_stmt: LET . IDENT
   34             | LET . IDENT ASSIGN expr

    IDENT  shift, and go to state 30


State 24

    4 struct_def_stmt: STRUCT_DEF IDENT LBRACE struct_member_list RBRACE . SEMICOLON

    SEMICOLON  shift, and go to state 31


State 25

    6 struct_member_list: struct_member_list declare_stmt . SEMICOLON

    SEMICOLON  shift, and go to state 32


State 26

   13 param_list: IDENT .

    $default  reduce using rule 13 (param_list)


State 27

   10 func: FUNC IDENT LPAREN RPAREN . LBRACE stmt_list RETURN expr SEMICOLON RBRACE

    LBRACE  shift, and go to state 33


State 28

    9 func: FUNC IDENT LPAREN param_list . RPAREN LBRACE stmt_list RETURN expr SEMICOLON RBRACE
   14 param_list: param_list . COMMA IDENT

    RPAREN  shift, and go to state 34
    COMMA   shift, and go to state 35


State 29

   72 block: LBRACE $@2 . stmt_list RBRACE

    IDENT     shift, and go to state 36
    LET       shift, and go to state 23
    IF        shift, and go to state 37
    WHILE     shift, and go to state 38
    INPUT     shift, and go to state 39
    OUTPUT    shift, and go to state 40
    STRUCT    shift, and go to state 41
    LBRACKET  shift, and go to state 42

    stmt_list            go to state 43
    stmt                 go to state 44
    struct_declare_stmt  go to state 45
    array_declare_stmt   go to state 46
    declare_stmt         go to state 47
    assign_stmt          go to state 48
    if_stmt              go to state 49
    while_stmt           go to state 50
    input_stmt           go to state 51
    output_stmt          go to state 52
    func_call            go to state 53


State 30

   33 declare_stmt: LET IDENT .
   34             | LET IDENT . ASSIGN expr

    ASSIGN  shift, and go to state 54

    $default  reduce using rule 33 (declare_stmt)


State 31

    4 struct_def_stmt: STRUCT_DEF IDENT LBRACE struct_member_list RBRACE SEMICOLON .

    $default  reduce using rule 4 (struct_def_stmt)


State 32

    6 struct_member_list: struct_member_list declare_stmt SEMICOLON .

    $default  reduce using rule 6 (struct_member_list)


State 33

   10 func: FUNC IDENT LPAREN RPAREN LBRACE . stmt_list RETURN expr SEMICOLON RBRACE

    IDENT     shift, and go to state 36
    LET       shift, and go to state 23
    IF        shift, and go to state 37
    WHILE     shift, and go to state 38
    INPUT     shift, and go to state 39
    OUTPUT    shift, and go to state 40
    STRUCT    shift, and go to state 41
    LBRACKET  shift, and go to state 42

    stmt_list            go to state 55
    stmt                 go to state 44
    struct_declare_stmt  go to state 45
    array_declare_stmt   go to state 46
    declare_stmt         go to state 47
    assign_stmt          go to state 48
    if_stmt              go to state 49
    while_stmt           go to state 50
    input_stmt           go to state 51
    output_stmt          go to state 52
    func_call            go to state 53


State 34

    9 func: FUNC IDENT LPAREN param_list RPAREN . LBRACE stmt_list RETURN expr SEMICOLON RBRACE

    LBRACE  shift, and go to state 56


State 35

   14 param_list: param_list COMMA . IDENT

    IDENT  shift, and go to state 57


State 36

   35 assign_stmt: IDENT . ASSIGN expr
   36            | IDENT . DOT IDENT ASSIGN expr
   37            | IDENT . LBRACKET expr RBRACKET ASSIGN expr
   43 func_call: IDENT . LPAREN arg_list RPAREN
   44          | IDENT . LPAREN RPAREN

    ASSIGN    shift, and go to state 58
    LPAREN    shift, and go to state 59
    LBRACKET  shift, and go to state 60
    DOT       shift, and go to state 61


State 37

   38 if_stmt: IF . LPAREN bool_expr RPAREN block
   39        | IF . LPAREN bool_expr RPAREN block ELSE block

    LPAREN  shift, and go to state 62


State 38

   40 while_stmt: WHILE . LPAREN bool_expr RPAREN block

    LPAREN  shift, and go to state 63


State 39

   41 input_stmt: INPUT . LPAREN ident_list RPAREN

    LPAREN  shift, and go to state 64


State 40

   42 output_stmt: OUTPUT . LPAREN expr_list RPAREN

    LPAREN  shift, and go to state 65


State 41

   26 struct_declare_stmt: STRUCT . IDENT IDENT ASSIGN LBRACE struct_init_list RBRACE
   27                    | STRUCT . IDENT IDENT

    IDENT  shift, and go to state 66


State 42

   30 array_declare_stmt: LBRACKET . NUMBER RBRACKET IDENT ASSIGN LBRACE number_list RBRACE

    NUMBER  shift, and go to state 67


State 43

   16 stmt_list: stmt_list . stmt SEMICOLON
   72 block: LBRACE $@2 stmt_list . RBRACE

    IDENT     shift, and go to state 36
    LET       shift, and go to state 23
    IF        shift, and go to state 37
    WHILE     shift, and go to state 38
    INPUT     shift, and go to state 39
    OUTPUT    shift, and go to state 40
    STRUCT    shift, and go to state 41
    LBRACKET  shift, and go to state 42
    RBRACE    shift, and go to state 68

    stmt                 go to state 69
    struct_declare_stmt  go to state 45
    array_declare_stmt   go to state 46
    declare_stmt         go to state 47
    assign_stmt          go to state 48
    if_stmt              go to state 49
    while_stmt           go to state 50
    input_stmt           go to state 51
    output_stmt          go to state 52
    func_call            go to state 53


State 44

   15 stmt_list: stmt . SEMICOLON

    SEMICOLON  shift, and go to state 70


State 45

   19 stmt: struct_declare_stmt .

    $default  reduce using rule 19 (stmt)


State 46

   18 stmt: array_declare_stmt .

    $default  reduce using rule 18 (stmt)


State 47

   17 stmt: declare_stmt .

    $default  reduce using rule 17 (stmt)


State 48

   20 stmt: assign_stmt .

    $default  reduce using rule 20 (stmt)


State 49

   21 stmt: if_stmt .

    $default  reduce using rule 21 (stmt)


State 50

   22 stmt: while_stmt .

    $default  reduce using rule 22 (stmt)


State 51

   23 stmt: input_stmt .

    $default  reduce using rule 23 (stmt)


State 52

   24 stmt: output_stmt .

    $default  reduce using rule 24 (stmt)


State 53

   25 stmt: func_call .

    $default  reduce using rule 25 (stmt)


State 54

   34 declare_stmt: LET IDENT ASSIGN . expr

    NUMBER  shift, and go to state 71
    IDENT   shift, and go to state 72
    PLUS    shift, and go to state 73
    MINUS   shift, and go to state 74
    LPAREN  shift, and go to state 75

    func_call  go to state 76
    expr       go to state 77
    term       go to state 78
    factor     go to state 79


State 55

   10 func: FUNC IDENT LPAREN RPAREN LBRACE stmt_list . RETURN expr SEMICOLON RBRACE
   16 stmt_list: stmt_list . stmt SEMICOLON

    IDENT     shift, and go to state 36
    RETURN    shift, and go to state 80
    LET       shift, and go to state 23
    IF        shift, and go to state 37
    WHILE     shift, and go to state 38
    INPUT     shift, and go to state 39
    OUTPUT    shift, and go to state 40
    STRUCT    shift, and go to state 41
    LBRACKET  shift, and go to state 42

    stmt                 go to state 69
    struct_declare_stmt  go to state 45
    array_declare_stmt   go to state 46
    declare_stmt         go to state 47
    assign_stmt          go to state 48
    if_stmt              go to state 49
    while_stmt           go to state 50
    input_stmt           go to state 51
    output_stmt          go to state 52
    func_call            go to state 53


State 56

    9 func: FUNC IDENT LPAREN param_list RPAREN LBRACE . stmt_list RETURN expr SEMICOLON RBRACE

    IDENT     shift, and go to state 36
    LET       shift, and go to state 23
    IF        shift, and go to state 37
    WHILE     shift, and go to state 38
    INPUT     shift, and go to state 39
    OUTPUT    shift, and go to state 40
    STRUCT    shift, and go to state 41
    LBRACKET  shift, and go to state 42

    stmt_list            go to state 81
    stmt                 go to state 44
    struct_declare_stmt  go to state 45
    array_declare_stmt   go to state 46
    declare_stmt         go to state 47
    assign_stmt          go to state 48
    if_stmt              go to state 49
    while_stmt           go to state 50
    input_stmt           go to state 51
    output_stmt          go to state 52
    func_call            go to state 53


State 57

   14 param_list: param_list COMMA IDENT .

    $default  reduce using rule 14 (param_list)


State 58

   35 assign_stmt: IDENT ASSIGN . expr

    NUMBER  shift, and go to state 71
    IDENT   shift, and go to state 72
    PLUS    shift, and go to state 73
    MINUS   shift, and go to state 74
    LPAREN  shift, and go to state 75

    func_call  go to state 76
    expr       go to state 82
    term       go to state 78
    factor     go to state 79


State 59

   43 func_call: IDENT LPAREN . arg_list RPAREN
   44          | IDENT LPAREN . RPAREN

    NUMBER  shift, and go to state 71
    IDENT   shift, and go to state 72
    PLUS    shift, and go to state 73
    MINUS   shift, and go to state 74
    LPAREN  shift, and go to state 75
    RPAREN  shift, and go to state 83

    func_call  go to state 76
    arg_list   go to state 84
    expr       go to state 85
    term       go to state 78
    factor     go to state 79


State 60

   37 assign_stmt: IDENT LBRACKET . expr RBRACKET ASSIGN expr

    NUMBER  shift, and go to state 71
    IDENT   shift, and go to state 72
    PLUS    shift, and go to state 73
    MINUS   shift, and go to state 74
    LPAREN  shift, and go to state 75

    func_call  go to state 76
    expr       go to state 86
    term       go to state 78
    factor     go to state 79


State 61

   36 assign_stmt: IDENT DOT . IDENT ASSIGN expr

    IDENT  shift, and go to state 87


State 62

   38 if_stmt: IF LPAREN . bool_expr RPAREN block
   39        | IF LPAREN . bool_expr RPAREN block ELSE block

    NUMBER  shift, and go to state 71
    IDENT   shift, and go to state 72
    PLUS    shift, and go to state 73
    MINUS   shift, and go to state 74
    LPAREN  shift, and go to state 75

    func_call  go to state 76
    bool_expr  go to state 88
    expr       go to state 89
    term       go to state 78
    factor     go to state 79


State 63

   40 while_stmt: WHILE LPAREN . bool_expr RPAREN block

    NUMBER  shift, and go to state 71
    IDENT   shift, and go to state 72
    PLUS    shift, and go to state 73
    MINUS   shift, and go to state 74
    LPAREN  shift, and go to state 75

    func_call  go to state 76
    bool_expr  go to state 90
    expr       go to state 89
    term       go to state 78
    factor     go to state 79


State 64

   41 input_stmt: INPUT LPAREN . ident_list RPAREN

    IDENT  shift, and go to state 91

    ident_list  go to state 92


State 65

   42 output_stmt: OUTPUT LPAREN . expr_list RPAREN

    NUMBER  shift, and go to state 71
    IDENT   shift, and go to state 72
    PLUS    shift, and go to state 73
    MINUS   shift, and go to state 74
    LPAREN  shift, and go to state 75

    func_call  go to state 76
    expr_list  go to state 93
    expr       go to state 94
    term       go to state 78
    factor     go to state 79


State 66

   26 struct_declare_stmt: STRUCT IDENT . IDENT ASSIGN LBRACE struct_init_list RBRACE
   27                    | STRUCT IDENT . IDENT

    IDENT  shift, and go to state 95


State 67

   30 array_declare_stmt: LBRACKET NUMBER . RBRACKET IDENT ASSIGN LBRACE number_list RBRACE

    RBRACKET  shift, and go to state 96


State 68

   72 block: LBRACE $@2 stmt_list RBRACE .

    $default  reduce using rule 72 (block)


State 69

   16 stmt_list: stmt_list stmt . SEMICOLON

    SEMICOLON  shift, and go to state 97


State 70

   15 stmt_list: stmt SEMICOLON .

    $default  reduce using rule 15 (stmt_list)


State 71

   68 factor: NUMBER .

    $default  reduce using rule 68 (factor)


State 72

   43 func_call: IDENT . LPAREN arg_list RPAREN
   44          | IDENT . LPAREN RPAREN
   65 factor: IDENT .
   66       | IDENT . DOT IDENT
   67       | IDENT . LBRACKET expr RBRACKET

    LPAREN    shift, and go to state 59
    LBRACKET  shift, and go to state 98
    DOT       shift, and go to state 99

    $default  reduce using rule 65 (factor)


State 73

   57 expr: PLUS . term

    NUMBER  shift, and go to state 71
    IDENT   shift, and go to state 72
    LPAREN  shift, and go to state 75

    func_call  go to state 76
    term       go to state 100
    factor     go to state 79


State 74

   58 expr: MINUS . term

    NUMBER  shift, and go to state 71
    IDENT   shift, and go to state 72
    LPAREN  shift, and go to state 75

    func_call  go to state 76
    term       go to state 101
    factor     go to state 79


State 75

   69 factor: LPAREN . expr RPAREN

    NUMBER  shift, and go to state 71
    IDENT   shift, and go to state 72
    PLUS    shift, and go to state 73
    MINUS   shift, and go to state 74
    LPAREN  shift, and go to state 75

    func_call  go to state 76
    expr       go to state 102
    term       go to state 78
    factor     go to state 79


State 76

   70 factor: func_call .

    $default  reduce using rule 70 (factor)


State 77

   34 declare_stmt: LET IDENT ASSIGN expr .
   60 expr: expr . PLUS term
   61     | expr . MINUS term

    PLUS   shift, and go to state 103
    MINUS  shift, and go to state 104

    $default  reduce using rule 34 (declare_stmt)


State 78

   59 expr: term .
   62 term: term . MUL factor
   63     | term . DIV factor

    MUL  shift, and go to state 105
    DIV  shift, and go to state 106

    $default  reduce using rule 59 (expr)


State 79

   64 term: factor .

    $default  reduce using rule 64 (term)


State 80

   10 func: FUNC IDENT LPAREN RPAREN LBRACE stmt_list RETURN . expr SEMICOLON RBRACE

    NUMBER  shift, and go to state 71
    IDENT   shift, and go to state 72
    PLUS    shift, and go to state 73
    MINUS   shift, and go to state 74
    LPAREN  shift, and go to state 75

    func_call  go to state 76
    expr       go to state 107
    term       go to state 78
    factor     go to state 79


State 81

    9 func: FUNC IDENT LPAREN param_list RPAREN LBRACE stmt_list . RETURN expr SEMICOLON RBRACE
   16 stmt_list: stmt_list . stmt SEMICOLON

    IDENT     shift, and go to state 36
    RETURN    shift, and go to state 108
    LET       shift, and go to state 23
    IF        shift, and go to state 37
    WHILE     shift, and go to state 38
    INPUT     shift, and go to state 39
    OUTPUT    shift, and go to state 40
    STRUCT    shift, and go to state 41
    LBRACKET  shift, and go to state 42

    stmt                 go to state 69
    struct_declare_stmt  go to state 45
    array_declare_stmt   go to state 46
    declare_stmt         go to state 47
    assign_stmt          go to state 48
    if_stmt              go to state 49
